consolidate new generation trigger logic

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <table id="tb">
         </table>
 
-        <button onclick="generate()">Generate</button>
+        <button onclick="nextGeneration()">Generate</button>
 
         <button onclick="nextGeneration()">Next Generation</button>
 
